added half logic

--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ h1 {
 
 /* ---------- DIALOG BOX ---------- */
 #noteDialog {
+  margin: auto;
   padding: 0;
   border: none;
   border-radius: 10px;
